--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - mediawiki-volume:/srv/mediawiki
     ports:
-      - "8080:80"
+      - "$SERVER_PORT:80"
   php:
     build: './php'
     links:
