--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:mainline
-COPY metakgp.org /etc/nginx/conf.d/default.conf
+COPY metakgp.org /etc/nginx/sites-enabled/
 COPY nginx.conf /etc/nginx/
+RUN rm /etc/nginx/conf.d/default.conf
