--- a/.env.template
+++ b/.env.template
@@ -4,4 +4,4 @@ RECAPTCHA_SECRET_KEY=
 WG_SECRET_KEY=
 SITE_UPGRADE_KEY=
 SERVER_PORT=8080
-SERVER_NAME=http://localhost:$SERVER_PORT
+SERVER_NAME=http://localhost:8080
