--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,26 @@ services:
 language: generic
 
 before_install:
+  - sudo apt-get remove docker docker-engine
   - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-engine
+  - >
+    sudo apt-get install -y
+    linux-image-extra-$(uname -r)
+    linux-image-extra-virtual
+    apt-transport-https
+    ca-certificates
+    curl
+    software-properties-common
+  - >
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg |
+    sudo apt-key add -
+  - >
+    sudo add-apt-repository
+    "deb [arch=amd64] https://download.docker.com/linux/ubuntu
+    $(lsb_release -cs)
+    stable"
+  - sudo apt-get update
+  - sudo apt-get install docker-ce
 
 script:
   - docker-compose build
