--- a/.travis.yml
+++ b/.travis.yml
@@ -6,26 +6,10 @@ services:
 language: generic
 
 before_install:
-  - sudo apt-get remove docker docker-engine
-  - sudo apt-get update
-  - >
-    sudo apt-get install -y
-    linux-image-extra-$(uname -r)
-    linux-image-extra-virtual
-    apt-transport-https
-    ca-certificates
-    curl
-    software-properties-common
-  - >
-    curl -fsSL https://download.docker.com/linux/ubuntu/gpg |
-    sudo apt-key add -
-  - >
-    sudo add-apt-repository
-    "deb [arch=amd64] https://download.docker.com/linux/ubuntu
-    $(lsb_release -cs)
-    stable"
-  - sudo apt-get update
-  - sudo apt-get install docker-ce
-
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  
 script:
   - docker-compose build
