Exclude images/thumb from backup

--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -3,7 +3,8 @@ RUN apt-get update && apt-get install -y \
       cron \
       mysql-client \
       python \
-      python-pip
+      python-pip \
+      rsync
 
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
