Make apt-get more quiet

--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:jessie
-RUN apt-get update && apt-get install -y \
+RUN apt-get -qq update && apt-get -qq install -y \
       cron \
       mysql-client \
       python \
