--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:7-fpm
-RUN apt-get update && apt-get install -y \
+RUN apt-get -qq update && apt-get -qq install -y \
             build-essential \
             libfreetype6-dev \
             libjpeg62-turbo-dev \
