--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,6 @@ services:
       - SITE_UPGRADE_KEY=$SITE_UPGRADE_KEY
       - MYSQL_PASSWORD=$MYSQL_PASSWORD
       - SERVER_NAME=$SERVER_NAME
+      - GOOGLE_MAPS_API_KEY=$GOOGLE_MAPS_API_KEY
   mediawiki:
     build: './mediawiki'
