--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,11 @@ services:
       - DROPBOX_ACCESS_TOKEN=$DROPBOX_ACCESS_TOKEN
     volumes:
       - mediawiki-volume:/srv/mediawiki
+  jobs:
+    build: './jobs'
+    environment:
+      - BATMAN_BOT_PASSWORD=$BATMAN_BOT_PASSWORD
+      - GOOGLE_ANALYTICS_SERVICE_KEY=$GOOGLE_ANALYTICS_SERVICE_KEY
 
 volumes:
   mediawiki-volume:
