--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 script:
-  - docker-compose build
+  - docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.prod.yml build
   - test/integration/run_tests.sh
