--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,7 @@ services:
   nginx:
     volumes:
       - mediawiki-volume:/srv/mediawiki
+      - static-volume:/srv/static
     ports:
       - "${SERVER_PORT:-8080}:80"
   php:
@@ -19,3 +20,4 @@ services:
 volumes:
   mediawiki-volume:
   db-volume:
+  static-volume:
