--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:mainline
 COPY metakgp.org /etc/nginx/sites-enabled/
+COPY static /etc/nginx/sites-enabled/
 COPY nginx.conf /etc/nginx/
 RUN rm /etc/nginx/conf.d/default.conf
