--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,5 +25,6 @@ services:
       - SERVER_NAME=$SERVER_NAME
       - GOOGLE_MAPS_API_KEY=$GOOGLE_MAPS_API_KEY
       - SLACK_WEBHOOK_URL=$SLACK_WEBHOOK_URL
+      - NEWRELIC_LICENSE=$NEWRELIC_LICENSE
   mediawiki:
     build: './mediawiki'
