include varnish and a default configuration for it

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,8 +7,9 @@ services:
   nginx:
     volumes:
       - mediawiki-volume:/srv/mediawiki
+  varnish:
     ports:
-      - "${SERVER_PORT:-8080}:80"
+      - "${SERVER_PORT:-8080}:6081"
   php:
     volumes:
       - mediawiki-volume:/srv/mediawiki
