copy metamaint.sh to the root of the jobs container

--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -28,6 +28,6 @@ COPY pywikibot/user-config.py pywikibot/user-password.py pywikibot/
 COPY pywikibot/metakgp_family.py pywikibot/pywikibot/families/
 COPY pywikibot/scripts/ pywikibot/scripts/
 
-COPY crontab update_top_trending.sh ./
+COPY crontab update_top_trending.sh MetaMaint.sh ./
 
 CMD ["supercronic", "/root/crontab"]
