--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build: './php'
     links:
       - mysql:mysql-docker
+      - parsoid:parsoid-docker
     environment:
       - MAILGUN_PASSWORD=$MAILGUN_PASSWORD
       - RECAPTCHA_SECRET_KEY=$RECAPTCHA_SECRET_KEY
@@ -28,3 +29,5 @@ services:
       - NEWRELIC_LICENSE=$NEWRELIC_LICENSE
   mediawiki:
     build: './mediawiki'
+  parsoid:
+    build: './parsoid'
