--- a/test/integration/.env
+++ b/test/integration/.env
@@ -3,6 +3,6 @@ MAILGUN_PASSWORD=
 RECAPTCHA_SECRET_KEY=
 WG_SECRET_KEY=
 SITE_UPGRADE_KEY=
-SERVER_PORT=
+SERVER_PORT=8080
 SERVER_NAME=http://localhost:8080
 DROPBOX_ACCESS_TOKEN=
