--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ language: generic
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
 script:
-  - docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.prod.yml build
+  - docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.prod.yml build --parallel
   - test/integration/run_tests.sh
