--- a/test/integration/docker-compose.test.yml
+++ b/test/integration/docker-compose.test.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - mediawiki-test-volume:/srv/mediawiki
     ports:
-      - "80"
+      - "${SERVER_PORT}:80"
   php:
     volumes:
       - mediawiki-test-volume:/srv/mediawiki
