Put parsoid on the main_network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
   parsoid:
     build: './parsoid'
     networks:
+      main_network:
       data_network:
         aliases:
           - parsoid-docker
