Upgrade Mediawiki's version to 1.34 (#78)
* Upgrade to mediawiki 1.34

* Scribunto comes with Mediawiki core starting 1.34

> This extension comes with MediaWiki 1.34 and above. Thus you do not
have to download it again. However, you still need to follow the other
instructions provided.
-- https://www.mediawiki.org/wiki/Extension:Scribunto

* Don't over-ride ArticleFeedbackv5 version

This over-ride is no longer necessary as we are upgrading to Mediawiki
1.34

* Upgrade PHP version: 7.1 => 7.3

* Scribunto is inside mediawiki-core now

* Define constant that's required by RecentPages

> If you use an undefined constant, PHP assumes that you mean the name
> of the constant itself, just as if you called it as a string (CONSTANT
> vs "CONSTANT"). This fallback is deprecated as of PHP 7.2.0, and an
> error of level E_WARNING is issued when it happens

-- https://www.php.net/manual/en/language.constants.syntax.php

This value MUST be an integer.

https://doc.wikimedia.org/mediawiki-core/master/php/GlobalFunctions_8php.html#a46345f25555fd93d272119932fbfc18f

--- a/mediawiki/Dockerfile
+++ b/mediawiki/Dockerfile
@@ -1,13 +1,13 @@
-FROM php:7-fpm-jessie
+FROM php:7.3-fpm-buster
 
 RUN apt-get -qq update && apt-get -qq install -y \
       git wget unzip
 
 WORKDIR /tmp
-RUN wget -q https://releases.wikimedia.org/mediawiki/1.33/mediawiki-1.33.0.tar.gz \
-      && tar -xzf mediawiki-1.33.0.tar.gz \
+RUN wget -q https://releases.wikimedia.org/mediawiki/1.34/mediawiki-1.34.0.tar.gz \
+      && tar -xzf mediawiki-1.34.0.tar.gz \
       && mkdir -p /srv \
-      && mv /tmp/mediawiki-1.33.0 /srv/mediawiki
+      && mv /tmp/mediawiki-1.34.0 /srv/mediawiki
 
 COPY install_extensions.sh post_install.sh /tmp/
 RUN /tmp/install_extensions.sh
