--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginx:mainline
 COPY wiki.metakgp.org /etc/nginx/sites-enabled/
 COPY static.metakgp.org /etc/nginx/sites-enabled/
+COPY gyft.metakgp.org /etc/nginx/sites-enabled/
 COPY nginx.conf /etc/nginx/
 RUN rm /etc/nginx/conf.d/default.conf
