--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3-slim
 
-RUN apt-get -qq update && apt-get install -qq -y \
-      wget curl
+RUN apt-get update && apt-get install wget curl
 
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
