fix: added -y to apt get commands

--- a/mediawiki/Dockerfile
+++ b/mediawiki/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.2-fpm-bookworm
 
 # Install tools and dependencies
-RUN apt-get update && apt-get install git wget unzip
+RUN apt-get update && apt-get install -y git wget unzip
 
 # Install mediawiki
 WORKDIR /tmp
