--- a/backup/Dockerfile
+++ b/backup/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3-slim
-RUN apt-get update && apt-get install cron default-mysql-client rsync
+RUN apt-get update && apt-get install -y cron default-mysql-client rsync
 
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
