feat: added descriptions for .env variables

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,19 @@
+# A secret password for the mysql database
 MYSQL_PASSWORD=
+# Port on which the server is exposed on the HOST.
 SERVER_PORT=8080
+# The base URL of the wiki. https://www.mediawiki.org/wiki/Manual:$wgServer
 SERVER_NAME=http://localhost:8080
+# Mailgun account for sending official mails from the wiki
 MAILGUN_PASSWORD=
 RECAPTCHA_SECRET_KEY=
+# Secret key used to encrypt stuff. Make it a long, random, SECRET string. https://www.mediawiki.org/wiki/Special:MyLanguage/Manual:$wgSecretKey
 WG_SECRET_KEY=
+# Password for making upgrades from the web interface. https://www.mediawiki.org/wiki/Manual:$wgUpgradeKey
 SITE_UPGRADE_KEY=
+# Dropbox account used for storing backups
 DROPBOX_ACCESS_TOKEN=
+# URL to the Slack webhook used to send updates
 SLACK_WEBHOOK_URL=
+# A generated password of the Batman bot user account on the wiki.
 BATMAN_BOT_PASSWORD=
