fix: used official command for using default prod php.ini

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -22,8 +22,8 @@ RUN pear install Numbers_Words-beta
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-# Use the production PHP config file
-RUN cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini
+# Use the default production configuration
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
 
 # Create directories for logs and set permissions
 RUN mkdir -p /var/log/mediawiki
