--- a/mediawiki/wiki.metaploy.conf
+++ b/mediawiki/wiki.metaploy.conf
@@ -1,13 +1,10 @@
 server {
-        # listen 8080 default_server;
 	listen 80 default_server;
-	# listen [::]:80 default_server ipv6only=on;
 
 	root /srv/mediawiki;
 	index index.php index.html;
-        autoindex off;
+	autoindex off;
 
-	# Make site accessible from everywhere
 	server_name wiki.metakgp.org;
 
 	# Location for the wiki's root
@@ -16,13 +13,13 @@ server {
 		location ~ \.php$ {
 			try_files $uri $uri/ =404; # Don't let php execute non-existent php files
 			include /etc/nginx/fastcgi_params;
+
 			fastcgi_pass mediawiki-docker:9000;
-                        fastcgi_index index.php;
-                        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+			fastcgi_index index.php;
+			fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
 		}
 	}
 
-	location ~ ^/google557cb96b33ddc6b5\.html$ {}
 	location ~ ^/robots\.txt$ {}
 
 	location /images {
@@ -35,6 +32,7 @@ server {
 			try_files $uri $uri/ @thumb;
 		}
 	}
+
 	location /images/deleted {
 		# Deny access to deleted images folder
 		deny	all;
@@ -50,16 +48,14 @@ server {
 	location /maintenance { deny all; }
 	location /serialized  { deny all; }
 
-
 	# Just in case, hide .svn and .git too
 	location ~ /.(svn|git)(/|$) { deny all; }
 
 	# Hide any .htaccess files
 	location ~ /.ht { deny all; }
 
-	# Uncomment the following code if you wish to hide the installer/updater
 	## Deny access to the installer
-	# location /mw-config { deny all; }
+	location /mw-config { deny all; }
 
 	# Handling for the article path
 	location /w {
@@ -80,40 +76,6 @@ server {
 		fastcgi_param SCRIPT_FILENAME	$document_root/thumb.php;
 		fastcgi_pass  mediawiki-docker:9000;
 	}
-	# Only for nginx-naxsi used with nginx-naxsi-ui : process denied requests
-	#location /RequestDenied {
-	#	proxy_pass http://127.0.0.1:8080;
-	#}
-
-	#error_page 404 /404.html;
-
-	# redirect server error pages to the static page /50x.html
-	#
-	#error_page 500 502 503 504 /50x.html;
-	#location = /50x.html {
-	#	root /usr/share/nginx/html;
-	#}
-
-	# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-	#
-	#location ~ \.php$ {
-	#	fastcgi_split_path_info ^(.+\.php)(/.+)$;
-	#	# NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-	#
-	#	# With php5-cgi alone:
-	#	fastcgi_pass 127.0.0.1:9000;
-	#	# With php5-fpm:
-	#	fastcgi_pass mediawiki-docker:/var/run/php5-fpm.sock;
-	#	fastcgi_index index.php;
-	#	include fastcgi_params;
-	#}
-
-	# deny access to .htaccess files, if Apache's document root
-	# concurs with nginx's one
-	#
-	#location ~ /\.ht {
-	#	deny all;
-	#}
 
 	# Cloudflare masks real IPs
 	set_real_ip_from 199.27.128.0/21;
