fix: copied metaploy configs for static

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -6,6 +6,7 @@ RUN rm /etc/nginx/conf.d/default.conf
 
 # Run a postinstall script that configures metaploy
 COPY wiki.metaploy.conf /
+COPY static.metaploy.conf /
 COPY postinstall.sh /
 
 CMD ["/postinstall.sh", "nginx", "-g", "daemon off;"]
