feat: added missing environment variables

--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,10 @@ SERVER_PORT=8080
 SERVER_NAME=http://localhost:8080
 # Mailgun account for sending official mails from the wiki
 MAILGUN_PASSWORD=
+# Google Analytics Account (GA-XXXXXX or UA-XXXXXX)
+GOOGLE_ANALYTICS_ACCOUNT=
+# Google Analytics Service Key (Only used in production to update statistics)
+GOOGLE_ANALYTICS_SERVICE_KEY=
 # Secret key used to encrypt stuff. Make it a long, random, SECRET string. https://www.mediawiki.org/wiki/Special:MyLanguage/Manual:$wgSecretKey
 WG_SECRET_KEY=
 # Password for making upgrades from the web interface. https://www.mediawiki.org/wiki/Manual:$wgUpgradeKey
