--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - static-volume:/srv/static
     environment:
       - MAILGUN_PASSWORD=$MAILGUN_PASSWORD
+      - GOOGLE_ANALYTICS_ACCOUNT=$GOOGLE_ANALYTICS_ACCOUNT
       - WG_SECRET_KEY=$WG_SECRET_KEY
       - SITE_UPGRADE_KEY=$SITE_UPGRADE_KEY
       - MYSQL_PASSWORD=$MYSQL_PASSWORD
