docs: updated .env description

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ MYSQL_PASSWORD=
 SERVER_PORT=8080
 # The base URL of the wiki. https://www.mediawiki.org/wiki/Manual:$wgServer
 SERVER_NAME=http://localhost:8080
-# Mailgun account for sending official mails from the wiki
+# Mailgun API key for sending official mails from the wiki
 MAILGUN_PASSWORD=
 # Google Analytics Account (GA-XXXXXX or UA-XXXXXX)
 GOOGLE_ANALYTICS_ACCOUNT=
