docs: updated mailgun stuff

--- a/.env.template
+++ b/.env.template
@@ -4,7 +4,7 @@ MYSQL_PASSWORD=
 SERVER_PORT=8080
 # The base URL of the wiki. https://www.mediawiki.org/wiki/Manual:$wgServer
 SERVER_NAME=http://localhost:8080
-# Mailgun API key for sending official mails from the wiki
+# Mailgun SMTP password for sending official mails from the wiki. See https://help.mailgun.com/hc/en-us/articles/203380100-Where-Can-I-Find-My-API-Key-and-SMTP-Credentials-
 MAILGUN_PASSWORD=
 # Google Analytics Account (GA-XXXXXX or UA-XXXXXX)
 GOOGLE_ANALYTICS_ACCOUNT=
