fix: included mime.types and conf.d in wiki nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,9 @@ pid /run/nginx.pid;
 events {}
 
 http {
+	include /etc/nginx/mime.types;
+	include /etc/nginx/conf.d/*.conf;
+
 	server {
 		listen 80 default_server;
 
