feat: added DEV env var

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,5 @@
+# Whether the wiki is running in a development environment
+DEV=false
 # A secret password for the mysql database
 MYSQL_PASSWORD=
 # Port on which the server is exposed on the HOST.
