--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,24 @@
+# Whether the wiki is running in a development environment
+DEV=false
+# A secret password for the mysql database
 MYSQL_PASSWORD=
+# Port on which the server is exposed on the HOST.
 SERVER_PORT=8080
+# The base URL of the wiki. https://www.mediawiki.org/wiki/Manual:$wgServer
 SERVER_NAME=http://localhost:8080
+# Mailgun SMTP password for sending official mails from the wiki. See https://help.mailgun.com/hc/en-us/articles/203380100-Where-Can-I-Find-My-API-Key-and-SMTP-Credentials-
 MAILGUN_PASSWORD=
-RECAPTCHA_SECRET_KEY=
+# Google Analytics Account (GA-XXXXXX or UA-XXXXXX)
+GOOGLE_ANALYTICS_ACCOUNT=
+# Google Analytics Service Key (Only used in production to update statistics)
+GOOGLE_ANALYTICS_SERVICE_KEY=
+# Secret key used to encrypt stuff. Make it a long, random, SECRET string. https://www.mediawiki.org/wiki/Special:MyLanguage/Manual:$wgSecretKey
 WG_SECRET_KEY=
+# Password for making upgrades from the web interface. https://www.mediawiki.org/wiki/Manual:$wgUpgradeKey
 SITE_UPGRADE_KEY=
+# Dropbox account used for storing backups
 DROPBOX_ACCESS_TOKEN=
-GOOGLE_MAPS_API_KEY=
+# URL to the Slack webhook used to send updates
 SLACK_WEBHOOK_URL=
-NEWRELIC_LICENSE=
+# A generated password of the Batman bot user account on the wiki.
+BATMAN_BOT_PASSWORD=
