--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,11 @@
 FROM nginx:mainline
-COPY wiki.metakgp.org /etc/nginx/sites-enabled/
-COPY static.metakgp.org /etc/nginx/sites-enabled/
-COPY gyft.metakgp.org /etc/nginx/sites-enabled/
-COPY wimp.metakgp.org /etc/nginx/sites-enabled/
+
+# Set up local nginx server
 COPY nginx.conf /etc/nginx/
 RUN rm /etc/nginx/conf.d/default.conf
+
+# Run a postinstall script that configures metaploy
+COPY wiki.metaploy.conf /
+COPY postinstall.sh /
+
+CMD ["/postinstall.sh", "nginx", "-g", "daemon off;"]
