--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -1,15 +1,14 @@
-FROM python:2
+FROM python:3-slim
 
-RUN apt-get -qq update && apt-get install -qq -y \
-      wget
+RUN apt-get update && apt-get install -y wget curl
 
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # Install https://github.com/aptible/supercronic as a cron replacement
-ENV SUPERCRONIC_URL=https://github.com/aptible/supercronic/releases/download/v0.1.3/supercronic-linux-amd64 \
+ENV SUPERCRONIC_URL=https://github.com/aptible/supercronic/releases/download/v0.2.26/supercronic-linux-amd64 \
     SUPERCRONIC=supercronic-linux-amd64 \
-    SUPERCRONIC_SHA1SUM=96960ba3207756bb01e6892c978264e5362e117e
+    SUPERCRONIC_SHA1SUM=7a79496cf8ad899b99a719355d4db27422396735
 
 RUN curl -fsSLO "$SUPERCRONIC_URL" \
  && echo "${SUPERCRONIC_SHA1SUM}  ${SUPERCRONIC}" | sha1sum -c - \
@@ -18,7 +17,7 @@ RUN curl -fsSLO "$SUPERCRONIC_URL" \
  && ln -s "/usr/local/bin/${SUPERCRONIC}" /usr/local/bin/supercronic
 
 WORKDIR /root
-RUN wget -qO- http://tools.wmflabs.org/pywikibot/core.tar.gz | tar xz \
+RUN wget -qO- https://tools.wmflabs.org/pywikibot/core.tar.gz | tar xz \
       && mv core pywikibot
 
 COPY requirements.txt ./
@@ -28,6 +27,6 @@ COPY pywikibot/user-config.py pywikibot/user-password.py pywikibot/
 COPY pywikibot/metakgp_family.py pywikibot/pywikibot/families/
 COPY pywikibot/scripts/ pywikibot/scripts/
 
-COPY crontab update_top_trending.sh MetaMaint.sh update_spam_blacklist.sh ./
+COPY crontab update_top_trending.sh MetaMaint.sh update_spam_denylist.sh ./
 
 CMD ["supercronic", "/root/crontab"]
