--- a/mediawiki/Dockerfile
+++ b/mediawiki/Dockerfile
@@ -1,30 +1,67 @@
-FROM php:7.3-fpm-buster
+FROM php:8.2-fpm-bookworm
 
-RUN apt-get -qq update && apt-get -qq install -y \
-      git wget unzip
+### INSTALLING MEDIAWIKI AND ITS EXTENSIONS ###
+# Install tools and dependencies
+RUN apt-get update && apt-get install -y git wget unzip
 
+# Install extensions required for the wiki runtime
+RUN apt-get install -y build-essential git-core gnupg2 \
+	graphicsmagick imagemagick libfreetype6-dev \
+	libicu-dev libjpeg62-turbo-dev libpng-dev \
+	wget
+
+# Install other php extensions
+RUN pecl install apcu
+RUN pear install Numbers_Words-beta
+RUN docker-php-ext-install -j$(nproc) gd intl mysqli opcache
+
+# Install mediawiki
 WORKDIR /tmp
-RUN wget -q https://releases.wikimedia.org/mediawiki/1.34/mediawiki-1.34.0.tar.gz \
-      && tar -xzf mediawiki-1.34.0.tar.gz \
-      && mkdir -p /srv \
-      && mv /tmp/mediawiki-1.34.0 /srv/mediawiki
+RUN wget -q https://releases.wikimedia.org/mediawiki/1.40/mediawiki-1.40.0.tar.gz
+RUN tar -xzf mediawiki-1.40.0.tar.gz
+RUN mkdir -p /srv
+RUN mv /tmp/mediawiki-1.40.0 /srv/mediawiki
 
-COPY install_extensions.sh post_install.sh /tmp/
-RUN /tmp/install_extensions.sh
-
-COPY LocalSettings.php robots.txt install_composer.sh composer.local.json /srv/mediawiki/
-
+# Set work directory
 WORKDIR /srv/mediawiki
 
-COPY extensions/ extensions/
-RUN ./install_composer.sh \
-      && php composer.phar update --no-dev --optimize-autoloader --no-suggest --no-progress
+# Install composer for installing some extensions
+RUN wget -cO - https://getcomposer.org/composer-2.phar > composer.phar
+ENV COMPOSER_ALLOW_SUPERUSER=1
+ENV COMPOSER_IGNORE_PLATFORM_REQS=1
 
+# Install Mediawiki extensions
+COPY scripts/install_extensions.sh /tmp/
+RUN /tmp/install_extensions.sh
+
+# Copy all source files
+COPY LocalSettings.php robots.txt /srv/mediawiki/
 COPY assets/ resources/assets/
+COPY scripts/gmconvert.sh /opt/
 
-COPY gmconvert.sh /opt/
-
+# Create directories for image storage
 RUN mkdir -p /srv/static/images && rm -rf images && ln -s /srv/static/images images
 RUN mkdir -p images/temp
 
-ENTRYPOINT /tmp/post_install.sh
+RUN chown -LR www-data:www-data /srv/mediawiki
+### /INSTALLING MEDIAWIKI AND ITS EXTENSIONS ###
+
+### RUNNING MEDIAWIKI ###
+# Configure php extensions
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/
+RUN docker-php-ext-enable apcu
+
+# Configure timezone
+ENV TZ=Asia/Kolkata
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+# Use the default production configuration
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+
+# Create directories for logs and set permissions
+RUN mkdir -p /var/log/mediawiki
+RUN touch /var/log/mediawiki/debug.log
+RUN chown -R www-data:www-data /var/log/mediawiki
+
+VOLUME /var/log
+### /RUNNING MEDIAWIKI ###
