--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,95 +2,104 @@ user www-data;
 worker_processes 1;
 pid /run/nginx.pid;
 
-events {
-	worker_connections 768;
-	# multi_accept on;
-}
+events {}
 
 http {
-
-	##
-	# Basic Settings
-	##
-
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-	server_tokens off;
-
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
-
 	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-
-	##
-	# Logging Settings
-	##
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
-	##
-	# Gzip Settings
-	##
-
-	gzip on;
-	gzip_disable "msie6";
-
-	gzip_vary on;
-	gzip_min_length 1000;
-	gzip_proxied any;
-	gzip_comp_level 6;
-	gzip_buffers 16 8k;
-	gzip_http_version 1.1;
-	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-	##
-	# nginx-naxsi config
-	##
-	# Uncomment it if you installed nginx-naxsi
-	##
-
-	#include /etc/nginx/naxsi_core.rules;
-
-	##
-	# nginx-passenger config
-	##
-	# Uncomment it if you installed nginx-passenger
-	##
-	
-	#passenger_root /usr;
-	#passenger_ruby /usr/bin/ruby;
-
-	##
-	# Virtual Host Configs
-	##
-
 	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+
+	server {
+		listen 80 default_server;
+
+		root /srv/mediawiki;
+		index index.php index.html;
+		autoindex off;
+
+		server_name wiki.metakgp.org;
+
+		# Location for the wiki's root
+		location / {
+			# Do this inside of a location so it can be negated
+			location ~ \.php$ {
+				try_files $uri $uri/ =404; # Don't let php execute non-existent php files
+				include /etc/nginx/fastcgi_params;
+
+				fastcgi_pass mediawiki-docker:9000;
+				fastcgi_index index.php;
+				fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
+			}
+		}
+
+		location ~ ^/robots\.txt$ {}
+
+		location /images {
+			# Separate location for images/ so .php execution won't apply
+
+			location ~ ^/images/thumb/(archive/)?[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ {
+				# Thumbnail handler for MediaWiki
+				# This location only matches on a thumbnail's url
+				# If the file does not exist we use @thumb to run the thumb.php script
+				try_files $uri $uri/ @thumb;
+			}
+		}
+
+		location /images/deleted {
+			# Deny access to deleted images folder
+			deny	all;
+		}
+
+		location ^~ /scripts/ {
+			return 404;
+		}
+
+		# Deny access to folders MediaWiki has a .htaccess deny in
+		location /cache       { deny all; }
+		location /languages   { deny all; }
+		location /maintenance { deny all; }
+		location /serialized  { deny all; }
+
+		# Just in case, hide .svn and .git too
+		location ~ /.(svn|git)(/|$) { deny all; }
+
+		# Hide any .htaccess files
+		location ~ /.ht { deny all; }
+
+		## Deny access to the installer
+		location /mw-config { deny all; }
+
+		# Handling for the article path
+		location /w {
+			include /etc/nginx/fastcgi_params;
+			# article path should always be passed to index.php
+			fastcgi_param SCRIPT_FILENAME	$document_root/index.php;
+			fastcgi_pass  mediawiki-docker:9000;
+		}
+
+		# Thumbnail 404 handler, only called by try_files when a thumbnail does not exist
+		location @thumb {
+			# Do a rewrite here so that thumb.php gets the correct arguments
+			rewrite ^/images/thumb/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ /thumb.php?f=$1&width=$2;
+			rewrite ^/images/thumb/archive/[0-9a-f]/[0-9a-f][0-9a-f]/([^/]+)/([0-9]+)px-.*$ /thumb.php?f=$1&width=$2&archived=1;
+
+			# Run the thumb.php script
+			include /etc/nginx/fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME	$document_root/thumb.php;
+			fastcgi_pass  mediawiki-docker:9000;
+		}
+	}
+
+	server {
+		listen 80;
+
+		root /srv/static;
+		autoindex off;
+
+		# Make site accessible from everywhere
+		server_name static.metakgp.org;
+
+		location / {
+			try_files $uri $uri/ =404;
+		}
+	}
 }
 
-
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
