--- a/nginx/wiki.metaploy.conf
+++ b/nginx/wiki.metaploy.conf
@@ -1,19 +1,20 @@
+upstream metawiki_server {
+	server metawiki:80;
+}
+
+# Wiki configuration
 server {
-        # listen 8080 default_server;
-	listen 80;
-	# listen [::]:80 default_server ipv6only=on;
+	server_name wiki.metakgp.org;
 
-	root /srv/static;
-        autoindex off;
+	listen 80 default_server;
 
-	# Make site accessible from everywhere
-	server_name static.metakgp.org;
+	index index.php index.html;
+	autoindex off;
 
-	# Location for the wiki's root
 
 	location / {
-		try_files $uri $uri/ =404;
-	}
+        proxy_pass http://metawiki_server;
+    }
 
 	# Cloudflare masks real IPs
 	set_real_ip_from 199.27.128.0/21;
@@ -24,7 +25,7 @@ server {
 	set_real_ip_from 141.101.64.0/18;
 	set_real_ip_from 108.162.192.0/18;
 	set_real_ip_from 190.93.240.0/20;
-	set_real_ip_from 188.114.96.0/20; 
+	set_real_ip_from 188.114.96.0/20;
 	set_real_ip_from 197.234.240.0/22;
 	set_real_ip_from 198.41.128.0/17;
 	set_real_ip_from 162.158.0.0/15;
